<resources>
    <string name="app_name">SPA</string>
    <string name="welcome_to_nsmart_protector_app">Welcome to \nSmart Protector App</string>
    <string name="enter_as_a_elder">Enter As a Elder</string>
    <string name="enter_as_a_doctor">Enter As a Doctor</string>
    <string name="enter_as_a_caretaker">Enter As a Caretaker</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="elder_s_phone">Elder\'s Phone</string>
    <string name="login">Login</string>
    <string name="already_have">Already have an Account?</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_elder_s_name">Enter Elder\'s Name</string>
    <string name="sign_up_as_elder">SIGN UP AS ELDER</string>
    <string name="caretaker_s_phone">Caretaker\'s Phone</string>
    <string name="welcome_caretaker">WELCOME CARETAKER</string>
    <string name="enter_caretaker_s_name">Enter Caretaker\'s Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_your_dob">Select your DOB</string>
    <string name="enter_elder_s_medical_description">Enter Elder\'s Medical Description</string>
    <string name="next">NEXT</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to_your_nxxxxxxx">Please Enter the otp sent to your</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="verify">Verify</string>
    <string name="_26_12_2024_11_40am">26/12/2024 11:40AM</string>
    <string name="hello_elder_s_name">Hello! Elder\'s Name</string>
    <string name="alert_history">Alert History</string>
    <string name="connect_to_caretaker">Connect to Elder</string>
    <string name="upcoming_reminder_s">Upcoming Reminder\'s</string>
    <string name="emergency">Emergency</string>
    <string name="resend">Resend</string>
    <string name="account">Account</string>
    <string name="welcome_caretaker_s_name">Welcome Caretaker\'s Name</string>
    <string name="health_monitoring">Health Monitoring</string>
    <string name="name">Name</string>
    <string name="elder_s_name">Elder\'s Name</string>
    <string name="connect">CONNECT</string>
    <string name="view_connected_elder_s">View Connected Elder\'s</string>
    <string name="account_details">Account Details</string>
    <string name="update">UPDATE</string>
    <string name="connected_elder_s">Connected Elder\'s</string>
    <string name="no_elder_s_found">No Elder\'s Found</string>
    <string name="medical_description">Medical Description</string>
    <string name="add_medication">ADD MEDICATION</string>
    <string name="add_check_up">ADD CHECK UP</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="elder_s_list">ELDER\'S LIST</string>
    <string name="services">Services</string>
    <string name="check_up_scheduler">Check Up Scheduler</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="enter_start_and_end_time">Enter start and end time</string>
    <string name="set_up">Set Up</string>
    <string name="delay_1hr">Delay 1Hr</string>
    <string name="no_of_medication_s">No of Medication\'s</string>
    <string name="enter_n_o_of_medications_you_want_to_schedule_n_for_e_g_if_you_want_to_schedule_morning_night_enter_2">Enter N.O of Medications you want to schedule\n[For E.g : If you want to schedule Morning,Night enter 2]</string>
    <string name="just_checking_in_nare_you_alright">Just Checking In \nAre you alright?</string>
    <string name="alright">Alright!</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="fall_was_detected_from_your_device_nare_you_alright">Fall was detected from your device\nAre you alright?</string>
</resources>