<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="15dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".services.FallDetectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/fall_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fall_detected_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fall_img"
            android:text="@string/fall_was_detected_from_your_device_nare_you_alright"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:id="@+id/alertMsg"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_checking_in_nare_you_alright"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fall_img"
            android:layout_marginTop="40dp"
            android:id="@+id/resText"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/green"
            app:cornerRadius="8dp"
            android:elevation="20dp"
            android:textStyle="bold"
            android:textSize="13sp"
            android:id="@+id/safe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertMsg"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/alright"
            android:textAllCaps="true"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>