<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reminders.schedulers.NoOfMedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_btn"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/noof_med_back_btn"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            style="@style/imgTint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:padding="5dp"
            android:text="@string/no_of_medication_s"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/textcolor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/help"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/enter_n_o_of_medications_you_want_to_schedule_n_for_e_g_if_you_want_to_schedule_morning_night_enter_2"
            android:textAlignment="center"
            style="@style/textcolor"
            android:textSize="17sp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textfield"
            android:layout_marginTop="10dp"
            android:id="@+id/noof_med"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:hint="Enter No of Medication's"
                android:layout_marginStart="4dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/mybtn"
            android:text="@string/next"
            android:textSize="13sp"
            android:id="@+id/noOfNext"/>

    </LinearLayout>

</LinearLayout>